--- a/Check-in Me/Base.lproj/Main.storyboard
+++ b/Check-in Me/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--First-->
+        <!--Harita-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="CheckInVC" customModule="Check_in_Me" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -17,36 +22,115 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="First View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6O4-Ao-3LF">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Konum Bilgisi" id="QrB-4E-9hh">
+                                        <barButtonItem key="leftBarButtonItem" title="Çıkış" id="0jK-IW-tu3">
+                                            <connections>
+                                                <action selector="onExit:" destination="9pv-A4-QxB" id="Xdg-fd-Hc3"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Çalışan" id="ANh-hx-XgI">
+                                            <connections>
+                                                <segue destination="geY-1c-oYV" kind="show" id="ZGD-1g-yc2"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Vj0-eP-S3F">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wdr-Bf-VlT">
+                                <rect key="frame" x="85" y="507" width="204" height="46"/>
+                                <state key="normal" image="button"/>
+                                <connections>
+                                    <action selector="sendLocationFB:" destination="9pv-A4-QxB" eventType="touchUpInside" id="4cM-Jb-nbU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="8" symbolic="YES" id="cfb-er-3JN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="e1l-AV-tCB"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
+                            <constraint firstItem="6O4-Ao-3LF" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="1qY-8y-z5E"/>
+                            <constraint firstItem="Vj0-eP-S3F" firstAttribute="top" secondItem="6O4-Ao-3LF" secondAttribute="bottom" id="75t-vX-RD9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wdr-Bf-VlT" secondAttribute="trailing" constant="70" id="ITg-e8-C8N"/>
+                            <constraint firstItem="Vj0-eP-S3F" firstAttribute="top" secondItem="6O4-Ao-3LF" secondAttribute="bottom" id="PR4-n9-krw"/>
+                            <constraint firstItem="6O4-Ao-3LF" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="RW0-fk-GON"/>
+                            <constraint firstItem="Vj0-eP-S3F" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="SGb-Co-vdB"/>
+                            <constraint firstItem="Vj0-eP-S3F" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="ZaG-Es-Zp3"/>
+                            <constraint firstAttribute="trailing" secondItem="Vj0-eP-S3F" secondAttribute="trailing" id="hKV-JB-l29"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Vj0-eP-S3F" secondAttribute="bottom" id="lb3-34-A1O"/>
+                            <constraint firstAttribute="trailing" secondItem="6O4-Ao-3LF" secondAttribute="trailing" id="n4x-rW-qFh"/>
+                            <constraint firstItem="wdr-Bf-VlT" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="oae-hO-r0U"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="wdr-Bf-VlT" secondAttribute="bottom" constant="65" id="sbj-UK-aYr"/>
+                            <constraint firstItem="wdr-Bf-VlT" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="69" id="ycT-mz-diE"/>
+                            <constraint firstItem="6O4-Ao-3LF" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="zRW-cX-T7j"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Harita" image="Map Marker-20" selectedImage="Map Marker Filled-20" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="map" destination="Vj0-eP-S3F" id="50u-YV-jeX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
+            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
-        <!--Second-->
+        <!--ManagerVC-->
+        <scene sceneID="Dvf-Xz-Gff">
+            <objects>
+                <viewController id="geY-1c-oYV" customClass="ManagerVC" customModule="Check_in_Me" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jwk-Te-B34"/>
+                        <viewControllerLayoutGuide type="bottom" id="K5N-sL-iXD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6Rz-Jk-1sm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pzd-rG-T9d">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Çalışan Konum Bilgisi" id="qr9-qM-qAx">
+                                        <barButtonItem key="leftBarButtonItem" image="Return Filled-25" id="yy9-iG-vVr">
+                                            <connections>
+                                                <segue destination="49e-Tb-3d3" kind="show" id="sLw-XD-adc"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fXJ-rR-z3p">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fXJ-rR-z3p" firstAttribute="top" secondItem="pzd-rG-T9d" secondAttribute="bottom" id="0Yr-ES-N9u"/>
+                            <constraint firstItem="pzd-rG-T9d" firstAttribute="leading" secondItem="6Rz-Jk-1sm" secondAttribute="leading" id="3LQ-ke-Nqr"/>
+                            <constraint firstItem="fXJ-rR-z3p" firstAttribute="leading" secondItem="6Rz-Jk-1sm" secondAttribute="leading" id="GRC-yr-81e"/>
+                            <constraint firstItem="pzd-rG-T9d" firstAttribute="top" secondItem="Jwk-Te-B34" secondAttribute="bottom" id="GlG-oa-DvR"/>
+                            <constraint firstItem="fXJ-rR-z3p" firstAttribute="centerX" secondItem="6Rz-Jk-1sm" secondAttribute="centerX" id="MAR-Xw-hEa"/>
+                            <constraint firstItem="K5N-sL-iXD" firstAttribute="top" secondItem="fXJ-rR-z3p" secondAttribute="bottom" id="Mw2-v7-f2L"/>
+                            <constraint firstItem="pzd-rG-T9d" firstAttribute="centerX" secondItem="6Rz-Jk-1sm" secondAttribute="centerX" id="U3Q-ZI-yNC"/>
+                            <constraint firstItem="fXJ-rR-z3p" firstAttribute="top" secondItem="pzd-rG-T9d" secondAttribute="bottom" id="qny-eG-Ta4"/>
+                            <constraint firstAttribute="trailing" secondItem="fXJ-rR-z3p" secondAttribute="trailing" id="r1w-Ys-lTQ"/>
+                            <constraint firstAttribute="trailing" secondItem="pzd-rG-T9d" secondAttribute="trailing" id="rsA-E7-Da4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="fXJ-rR-z3p" id="eaR-Vv-Cpp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F4D-bd-loP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1597.5999999999999" y="-321.58920539730138"/>
+        </scene>
+        <!--Sohbet-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="ChatVC" customModule="Check_in_Me" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -54,32 +138,13 @@
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="8" symbolic="YES" id="Day-4N-Vmt"/>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="JgO-Fn-dHn"/>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
-                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Sohbet" image="Speech Bubble-20" selectedImage="Speech Bubble Filled-20" id="cPa-gy-q4n"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="360"/>
+            <point key="canvasLocation" x="750" y="421"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -102,7 +167,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="Map Marker Filled-20" width="20" height="20"/>
+        <image name="Map Marker-20" width="20" height="20"/>
+        <image name="Return Filled-25" width="25" height="25"/>
+        <image name="Speech Bubble Filled-20" width="20" height="20"/>
+        <image name="Speech Bubble-20" width="20" height="20"/>
+        <image name="button" width="204" height="46"/>
     </resources>
 </document>
