--- a/Check-in Me/Base.lproj/Main.storyboard
+++ b/Check-in Me/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -174,7 +174,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9XE-pd-gKk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3615.1999999999998" y="375.56221889055473"/>
+            <point key="canvasLocation" x="3500" y="376"/>
+        </scene>
+        <!--Add TaskVC-->
+        <scene sceneID="p93-AW-Z5K">
+            <objects>
+                <viewController storyboardIdentifier="AddTaskVC" id="3iv-jg-Dth" customClass="AddTaskVC" customModule="Check_in_Me" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a5G-3g-h0H"/>
+                        <viewControllerLayoutGuide type="bottom" id="hbb-ak-pxX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tgS-Kl-jyX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="N3B-yf-Cc1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M7x-sH-y1U" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3500" y="1136"/>
         </scene>
         <!--ManagerVC-->
         <scene sceneID="wg7-f3-ORb">
@@ -309,7 +328,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EpQ-1I-bcz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2676" y="375.56221889055473"/>
+            <point key="canvasLocation" x="2607" y="376"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="p6c-kh-9t6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="d9N-tU-Q3S" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="KC3-em-eMD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3iv-jg-Dth" kind="relationship" relationship="rootViewController" id="rU3-KB-NPf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G2E-YV-xun" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2607" y="1136"/>
         </scene>
     </scenes>
     <resources>
