--- a/Check-in Me/Base.lproj/LaunchScreen.storyboard
+++ b/Check-in Me/Base.lproj/LaunchScreen.storyboard
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="140-innova-logo" translatesAutoresizingMaskIntoConstraints="NO" id="XqS-ry-hlL">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="140-innova-logo" translatesAutoresizingMaskIntoConstraints="NO" id="XqS-ry-hlL">
                                 <rect key="frame" x="46" y="220" width="282" height="227"/>
                             </imageView>
                         </subviews>
